fix spacing under labels input

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,10 @@
   margin-right: 2rem;
 }
 
+.labels > input {
+  margin-bottom: 1rem;
+}
+
 .status {
   text-align: center;
 }
@@ -48,8 +52,4 @@ option:hover {
 option.selected {
   cursor: pointer;
   background: #accef7;
-}
-
-.andFilter{
-  margin-bottom: 1rem;
 }
